added online users

--- a/src/components/send-message-box/send-message-box.html
+++ b/src/components/send-message-box/send-message-box.html
@@ -1,10 +1,10 @@
 <ion-grid>
     <ion-row>
       <ion-col col-9>
-        <ion-textarea placeholder="Enter message..."></ion-textarea>
+        <ion-textarea [(ngModel)]="content" placeholder="Enter message..."></ion-textarea>
       </ion-col>
       <ion-col col-3>
-        <button ion-button clear>Submit</button>
+        <button ion-button clear (click)="send()">Submit</button>
       </ion-col>
     </ion-row>
   </ion-grid>
