--- a/src/components/chat-message/chat-message.html
+++ b/src/components/chat-message/chat-message.html
@@ -1,17 +1,17 @@
-<ion-item *ngIf="chatIndex % 2 === 0; else right">
-  <ion-avatar item-left>
+<ion-item no-lines class="chat-messsage__message-right" *ngIf="chatMessage.userToId === userId; else from">
+  <ion-avatar item-right>
     <img src="assets/imgs/avatar.png" alt="">
   </ion-avatar>
-  <h2>Paul Halliday</h2>
-  <p>Test</p>
+  <h2>{{chatMessage?.userFromProfile?.firstName}} {{chatMessage?.userFromProfile?.lastName}}</h2>
+  <p>{{chatMessage?.content}}</p>
 </ion-item>
 
-<ng-template #right>
-  <ion-item class="chat-messsage__message-right">
-    <ion-avatar item-right>
+<ng-template #from>
+  <ion-item no-lines>
+    <ion-avatar item-left>
       <img src="assets/imgs/avatar.png" alt="">
     </ion-avatar>
-    <h2>John Doe</h2>
-    <p>Test</p>
+    <h2>{{chatMessage?.userFromProfile?.firstName}} {{chatMessage?.userFromProfile?.lastName}}</h2>
+    <p>{{chatMessage?.content}}</p>
   </ion-item>
 </ng-template>
